# Cursed

./: .gitmodules  CMakeLists.txt
src/: SDLwindow.c  SDLwindow.h  characters.h  main.c  main.cpp
